objects/CS_ByPassProcess__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TriggerClass__c</fullName>
        <label>TriggerClass</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>User Id</description>
        <label>User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isApexClass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isApexClass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLegacyPlaceholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLegacyPlaceholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTrigger</label>
        <type>Checkbox</type>
    </fields>
    <label>CS_ByPassProcess</label>
</CustomObject>